# slxgen

./: .gitignore  AGENTS.md  CLAUDE.md  DEVNOTES.md  README.md  environment.yml  package.json  pyproject.toml
docs/: _config.yml  architecture.md  guideline_proposals.md  impl_elk_validate.md  index.md  iss009_label_placement.md  issues.md  layout_default_transition.md  layout_findings.md  roadmap.md  sir_notes.md  stateflow_model_creation_guideline.md  workflow.md
example/model_gen/: Ex1_StMach_sf.yaml  fan_ctrl_draft.puml  fan_ctrl_gen.puml  fan_ctrl_sf.yaml  gen_Ex1.py  gen_Ex1_sir.py  gen_fan_ctrl.py  junction_test_sf.yaml  mlf_quick_start.py  quick_start.py  simple_filter_mlf.yaml
example/model_report/: model_report_gen_example.py
example/models/: pid_control_ex1.slx
example/models_compare/: compare_models_example.py  compare_trees.py
matlab/: sf_export_charts.m
slx2txt/: __init__.py  slx2txt.py  stateflow.py
slxgen/: __init__.py  cli.py  elk_layout.py  elk_runner.js  enum_gen.py  matlab_function.py  pipeline.py  slx2txt.py  slx_lint.py  stateflow.py  stateflow_sir.py
slxgen/matlab/: sfLintChart.m
work/: compare_models.py  compare_trees.py  process_model.py  sf_yaml_to_matlab_HMI_StMach.py  test_elk_variants.py
