[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slxgen"
version = "0.1.0"
description = "Parse Simulink models to text and generate models from text descriptions"
requires-python = ">=3.10"
dependencies = ["pyyaml", "typer"]

[project.scripts]
slxgen = "slxgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slxgen*"]
